Revamp mission selection layout in map.html

--- a/map.html
+++ b/map.html
@@ -1,20 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Mission Map</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
 <body>
-  <h1>Village Map</h1>
-  <div id="map">
-    <button class="mission-btn" data-mission="mission1.html">Dino Putt</button>
-    <button class="mission-btn" data-mission="mission2.html">Ol' Elmer</button>
-    <button class="mission-btn" data-mission="mission3.html">Castle of Miracles</button>
-    <button class="mission-btn" data-mission="mission4.html">Henri’s Ice Cream</button>
-    <button class="mission-btn" data-mission="mission5.html">Amberville Arcade</button>
-  </div>
+  <div class="map-container">
+    <h1>Choose Your Mission</h1>
 
-  <script src="js/map.js"></script>
+    <div class="missions">
+      <a href="mission1.html" class="mission-btn">Dino Putt</a>
+      <a href="mission2.html" class="mission-btn">Ol’ Elmer</a>
+      <a href="mission3.html" class="mission-btn">Castle of Miracles</a>
+      <a href="mission4.html" class="mission-btn">Henri’s Ice Cream</a>
+      <a href="mission5.html" class="mission-btn">Amberville Arcade</a>
+      <a href="finale.html" class="mission-btn finale">Finale</a>
+    </div>
+  </div>
 </body>
-</html>
