Add subtitle for mission selection guidance
Added a subtitle to guide users in choosing missions.

--- a/map.html
+++ b/map.html
@@ -2,6 +2,9 @@
   <div class="map-container">
     <h1>Choose Your Mission</h1>
 
+    <!-- ✨ Add this message here -->
+    <p class="subtitle">Explore the Village at your own pace. Choose any mission to begin!</p>
+
     <div class="missions">
       <a href="mission1.html" class="mission-btn">Dino Putt</a>
       <a href="mission2.html" class="mission-btn">Ol’ Elmer</a>
