Add badge awarding script for Mission 1
Add script to award badge for Mission 1 completion.

--- a/mission1.html
+++ b/mission1.html
@@ -44,5 +44,11 @@
       window.location.href = 'map.html';
     });
   </script>
+
+  <script>
+// Award the badge for Mission 1
+localStorage.setItem("badge_dino", "earned");
+</script>
+
 </body>
 </html>
