Store badge status in localStorage

--- a/mission2.html
+++ b/mission2.html
@@ -44,5 +44,8 @@
       window.location.href = 'map.html';
     });
   </script>
+
+  localStorage.setItem("badge_elmer", "earned");
+
 </body>
 </html>
