Move badge award script to end of mission2.html

--- a/mission2.html
+++ b/mission2.html
@@ -45,7 +45,7 @@
     });
   </script>
 
-  localStorage.setItem("badge_elmer", "earned");
-
-</body>
-</html>
+<script>
+// Award the badge for Mission 1
+localStorage.setItem("badge_elmer", "earned");
+</script>
