Implement badge awarding for Mission 1
Add script to award badge for Mission 1.

--- a/mission3.html
+++ b/mission3.html
@@ -46,3 +46,8 @@
   </script>
 </body>
 </html>
+
+<script>
+// Award the badge for Mission 1
+localStorage.setItem("badge_castle", "earned");
+</script>
