Add script to award badge for Mission 4

--- a/mission4.html
+++ b/mission4.html
@@ -46,3 +46,9 @@
   </script>
 </body>
 </html>
+
+<script>
+// Award the badge for Mission 1
+localStorage.setItem("badge_icecream", "earned");
+</script>
+
