Refactor badge awarding and mission completion script

--- a/mission1.html
+++ b/mission1.html
@@ -45,10 +45,15 @@
     });
   </script>
 
-  <script>
-// Award the badge for Mission 1
-localStorage.setItem("badge_dino", "earned");
-</script>
+<!-- Mission complete screen / button goes here -->
 
+<script>
+  // Save this mission as completed
+  localStorage.setItem("mission1", "true");
+
+  // Award the badge for Mission 1 (Dino Putt)
+  localStorage.setItem("badge_dino", "earned");
+</script>
 </body>
 </html>
+
